--- a/sass/layouts/_advantages.scss
+++ b/sass/layouts/_advantages.scss
@@ -1,23 +1,35 @@
 .advantages {
-  padding-bottom: 0;
 }
 
 .advantages__list {
   display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .advantages__item {
-  margin-right: 30px;
+  width: 100%;
 
   &:last-child {
     margin-right: 0;
+  }
+
+  @include mobile {
+    @include calc(1);
+  }
+  @include tablet {
+    @include calc(2);
+  }
+  @include desktop {
+    @include calc(4);
   }
 }
 
 .advantages__card-set {
   @extend %center;
   margin-bottom: 30px;
-  width: 270px;
+  width: 100%;
+  // width: 270px;
   height: 120px;
   background-color: var(--advantages-background-color);
   border-radius: 4px;
@@ -28,6 +40,11 @@
   @include font(700, 14px, 1.14, 0.03em);
   text-transform: uppercase;
   color: var(--primary-color);
+  text-align: center;
+
+  @include tablet {
+    text-align: left;
+  }
 }
 
 .advantages__text {
