--- a/sass/layouts/_command.scss
+++ b/sass/layouts/_command.scss
@@ -9,18 +9,30 @@
 
 .employees-list {
   display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .employees-list__item {
-  margin-right: 30px;
+  // margin-right: 30px;
   background-color: var(--background-color);
-  width: 270px;
+  width: 100%;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
   &:last-child {
     margin-right: 0;
+  }
+
+  @include mobile {
+    @include calc(1);
+  }
+  @include tablet {
+    @include calc(2);
+  }
+  @include desktop {
+    @include calc(4);
   }
 }
 
@@ -44,6 +56,7 @@
 
 .command__employees-icons {
   display: flex;
+  justify-content: center;
   gap: 10px;
   margin-top: 16px;
 }
@@ -51,7 +64,7 @@
 .employees-icons__item {
   width: 44px;
   height: 44px;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .employees-icons__link {
