--- a/css/main.css
+++ b/css/main.css
@@ -447,10 +447,10 @@ img {
 }
 
 .hero__style {
-  padding: 200px 0;
+  padding: 118px 60px;
   text-align: center;
   background-color: var(--background-secondary-color);
-  max-width: 1600px;
+  max-width: 480px;
   height: 600px;
   margin: 0 auto;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
@@ -470,6 +470,13 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--background-color);
+}
+@media screen and (min-width: 480px) {
+  .hero__title {
+    max-width: 480px;
+    font-size: 26px;
+    line-height: 1.62;
+  }
 }
 
 .hero__btn {
