--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,10 +1,9 @@
 .hero__style {
   // padding: 200px 0;
-  padding: 118px 60px;
   text-align: center;
   background-color: var(--background-secondary-color);
   max-width: 480px;
-  height: 600px;
+  height: 400px;
   margin: 0 auto;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -13,6 +12,24 @@
     url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
+
+  @include tablet {
+    max-width: 768px;
+  }
+  @include desktop {
+    max-width: 1600px;
+    height: 600px;
+  }
+}
+
+.hero__container {
+  padding: 118px 0;
+  max-width: 360px;
+
+  @include desktop {
+    min-width: 696px;
+    padding: 200px 0;
+  }
 }
 
 .hero__title {
@@ -21,13 +38,12 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 696px;
-  @include font(900, 44px, 1.36, 0.06em);
+  @include font(900, 26px, 1.62, 0.06em);
   text-transform: uppercase;
   color: var(--background-color);
 
-  @include mobile {
-    max-width: 480px;
-    @include font(null, 26px, 1.62, null);
+  @include desktop {
+    @include font(null, 44px, 1.36, null);
   }
 }
 
