--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -12,6 +12,7 @@
     url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
 
   @include tablet {
     max-width: 768px;
