--- a/sass/layouts/_footer-mailing.scss
+++ b/sass/layouts/_footer-mailing.scss
@@ -1,21 +1,34 @@
 .basement__mailing {
-  margin-left: 93px;
+  @include desktop {
+    margin-left: 93px;
+  }
 }
 
 .mailing__title {
   margin-bottom: 20px;
   @include font(700, 14px, 1.14, 0.03em);
   text-transform: uppercase;
+  text-align: center;
+
+  @include desktop {
+    text-align: left;
+  }
 
   color: var(--background-color);
 }
 
 .basement-form {
-  display: flex;
+  text-align: center;
+
+  @include desktop {
+    display: flex;
+  }
 }
 
 .basement-form__input {
-  min-width: 358px;
+  margin-bottom: 20px;
+
+  width: 100%;
   height: 50px;
   padding-top: 15px;
   padding-bottom: 15px;
@@ -30,13 +43,23 @@
   &::placeholder {
     color: rgba(255, 255, 255, 0.6);
   }
+
+  @include desktop {
+    width: 358px;
+  }
 }
 
 .basement-form__btn {
   width: 200px;
   height: 50px;
-  margin-left: 12px;
-  @extend %center;
+
+  @include desktop {
+    margin-left: 12px;
+  }
+
+  display: inline-flex;
+  align-items: center;
+  padding: 10px 29px;
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -52,7 +75,10 @@
 }
 
 .basement-form__icon {
-  align-items: center;
   margin-left: 10px;
   fill: var(--background-color);
+
+  @include desktop {
+    align-items: center;
+  }
 }
