--- a/sass/layouts/_footer-social.scss
+++ b/sass/layouts/_footer-social.scss
@@ -1,5 +1,9 @@
 .basement__social-networks {
-  margin-left: 70px;
+  margin-bottom: 60px;
+
+  @include desktop {
+    margin-left: 70px;
+  }
 }
 
 .social-networks__title {
@@ -8,12 +12,23 @@
   @include font(700, 14px, 1.14, 0.03em);
   text-transform: uppercase;
   color: var(--background-color);
+
+  text-align: center;
+
+  @include desktop {
+    text-align: left;
+  }
 }
 
 .social-icons {
   display: flex;
-  justify-items: center;
+  align-items: center;
+  justify-content: center;
   gap: 10px;
+
+  @include desktop {
+    justify-items: center;
+  }
 }
 
 .social-icons__link {
