--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,10 @@
   --main-btn-color: #ffffff;
   --border-color: #eeeeee;
   --modal-btn-color: #188ce8;
+  --gradient-hero: linear-gradient(
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)
+  );
 }
 
 .button-projects, .company-list__link, .employees-icons__link, .advantages__card-set, .contact__link, .navigation, .header__wrap, .modal__privacy-text div, .modal__privacy-text, .modal__field-privacy, .modal__close {
@@ -451,20 +455,37 @@ img {
   max-width: 480px;
   height: 400px;
   margin: 0 auto;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
+  background-image: var(--gradient-hero), url(../images/hero-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero__style {
+    background-image: var(--gradient-hero), url(../images/hero-mobile-2x.jpg);
+  }
+}
 @media screen and (min-width: 768px) {
   .hero__style {
     max-width: 768px;
+    background-image: var(--gradient-hero), url(../images/hero-tablet.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero__style {
+    background-image: var(--gradient-hero), url(../images/hero-tablet-2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
   .hero__style {
     max-width: 1600px;
     height: 600px;
+    background-image: var(--gradient-hero), url(../images/hero.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero__style {
+    background-image: var(--gradient-hero), url(../images/hero-2x.jpg);
   }
 }
 
