--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -4,21 +4,28 @@
   max-width: 480px;
   height: 400px;
   margin: 0 auto;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/hero.jpg);
+  background-image: var(--gradient-hero), url(../images/hero-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  @include retina {
+    background-image: var(--gradient-hero), url(../images/hero-mobile-2x.jpg);
+  }
 
   @include tablet {
     max-width: 768px;
+    background-image: var(--gradient-hero), url(../images/hero-tablet.jpg);
+    @include retina {
+      background-image: var(--gradient-hero), url(../images/hero-tablet-2x.jpg);
+    }
   }
   @include desktop {
     max-width: 1600px;
     height: 600px;
+    background-image: var(--gradient-hero), url(../images/hero.jpg);
+    @include retina {
+      background-image: var(--gradient-hero), url(../images/hero-2x.jpg);
+    }
   }
 }
 
