--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -11,4 +11,8 @@
   --main-btn-color: #ffffff;
   --border-color: #eeeeee;
   --modal-btn-color: #188ce8;
+  --gradient-hero: linear-gradient(
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)
+  );
 }
