--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
   );
 }
 
-.button-projects, .company-list__link, .employees-icons__link, .advantages__card-set, .contact__link, .navigation, .header__wrap, .modal__privacy-text div, .modal__privacy-text, .modal__field-privacy, .modal__close {
+.button-projects, .company-list__link, .employees-icons__link, .advantages__card-set, .mobile-close, .contact__link, .navigation, .header__wrap, .modal__privacy-text div, .modal__privacy-text, .modal__field-privacy, .modal__close {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -384,7 +384,7 @@ img {
 }
 
 .menu {
-  display: flex;
+  display: none;
 }
 
 .menu__item {
@@ -421,7 +421,7 @@ img {
 }
 
 .header__contact {
-  display: flex;
+  display: none;
   margin-left: auto;
 }
 
@@ -447,6 +447,101 @@ img {
 .contact__icon {
   align-items: baseline;
   margin-right: 10px;
+}
+
+.mobile-menu-btn {
+  margin-left: auto;
+}
+
+.mobile-menu {
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--background-color);
+  top: 0;
+  position: fixed;
+  z-index: 1;
+}
+.mobile-menu > .mobile-menu__container {
+  height: 100%;
+  padding: 48px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+}
+
+.mobile-menu-nav__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu-nav__link {
+  margin-bottom: 32px;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: var(--primary-color);
+}
+
+.mobile-menu-nav__link--active {
+  color: var(--accent-color);
+}
+
+.mobile-contact {
+  margin-bottom: 64px;
+}
+
+.mobile-contact__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-contact__tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.mobile-contact__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--secondary-color);
+}
+
+.mobile-social {
+  display: flex;
+}
+
+.mobile-social__item:not(:last-child) {
+  margin-right: 10px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mobile-social__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  text-decoration: none;
+}
+
+.mobile-close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  margin: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.mobile-close__icon {
+  fill: var(--accent-color);
 }
 
 .hero__style {
