--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
   );
 }
 
-.button-projects, .company-list__link, .employees-icons__link, .advantages__card-set, .mobile-close, .contact__link, .navigation, .header__wrap, .modal__privacy-text div, .modal__privacy-text, .modal__field-privacy, .modal__close {
+.button-projects, .company-list__link, .employees-icons__link, .advantages__card-set, .mobile-close, .navigation, .header__wrap, .modal__privacy-text div, .modal__privacy-text, .modal__field-privacy, .modal__close {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -379,12 +379,23 @@ img {
   border: 1px solid var(--background-portfolio-color);
 }
 
+@media screen and (min-width: 768px) {
+  .header__wrap {
+    justify-content: space-between;
+  }
+}
+
 .navigation__style {
   color: var(--accent-color);
 }
 
 .menu {
   display: none;
+}
+@media screen and (min-width: 768px) {
+  .menu {
+    display: flex;
+  }
 }
 
 .menu__item {
@@ -420,28 +431,78 @@ img {
   color: var(--accent-color);
 }
 
+@media screen and (min-width: 768px) {
+  .header-contacts-wrap {
+    display: block;
+    margin-top: 21px;
+    margin-bottom: 21px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-contacts-wrap {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-contacts-wrap .contact__item:first-child {
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .header-contacts-wrap .contact__item:first-child {
+    margin-bottom: 0;
+  }
+}
+
 .header__contact {
   display: none;
   margin-left: auto;
 }
-
-.contact__item {
-  margin-right: 50px;
+@media screen and (min-width: 768px) {
+  .header__contact {
+    display: block;
+  }
 }
+@media screen and (min-width: 1200px) {
+  .header__contact {
+    display: flex;
+  }
+}
+
 .contact__item:last-child {
   margin-right: 0;
+}
+@media screen and (min-width: 768px) {
+  .contact__item {
+    margin-right: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact__item {
+    margin-right: 50px;
+  }
 }
 
 .contact__link {
   padding-top: 32px;
   padding-bottom: 32px;
   color: var(--secondary-color);
+  display: flex;
+  align-items: center;
   fill: var(--secondary-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact__link:hover, .contact__link:focus {
   color: var(--accent-color);
   fill: var(--accent-color);
+}
+@media screen and (min-width: 768px) {
+  .contact__link {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
 
 .contact__icon {
@@ -451,6 +512,18 @@ img {
 
 .mobile-menu-btn {
   margin-left: auto;
+  background-color: transparent;
+  border: none;
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu-btn {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mobile-menu-btn {
+    display: none;
+  }
 }
 
 .mobile-menu {
@@ -682,6 +755,16 @@ img {
 
 .projects {
   padding-top: 0;
+}
+@media screen and (min-width: 480px) {
+  .projects {
+    display: none;
+  }
+}
+@media screen and (min-width: 480px) and (min-width: 1200px) {
+  .projects {
+    display: block;
+  }
 }
 
 .projects__title {
