--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -5,6 +5,9 @@
 
 .header__wrap {
   @extend %center;
+  @include tablet {
+    justify-content: space-between;
+  }
 }
 
 .navigation {
@@ -18,6 +21,10 @@
 .menu {
   // display: flex;
   display: none;
+
+  @include tablet {
+    display: flex;
+  }
 }
 
 .menu__item {
@@ -59,17 +66,50 @@
   }
 }
 
+.header-contacts-wrap {
+  @include tablet {
+    display: block;
+    margin-top: 21px;
+    margin-bottom: 21px;
+  }
+  @include desktop {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+
+.header-contacts-wrap .contact__item:first-child {
+  @include tablet {
+    margin-bottom: 10px;
+    @include desktop {
+      margin-bottom: 0;
+    }
+  }
+}
+
 .header__contact {
   // display: flex;
   display: none;
   margin-left: auto;
+
+  @include tablet {
+    display: block;
+  }
+  @include desktop {
+    display: flex;
+  }
 }
 
 .contact__item {
-  margin-right: 50px;
-
   &:last-child {
     margin-right: 0;
+  }
+
+  @include tablet {
+    margin-right: 0;
+  }
+  @include desktop {
+    margin-right: 50px;
   }
 }
 
@@ -77,7 +117,8 @@
   padding-top: 32px;
   padding-bottom: 32px;
   color: var(--secondary-color);
-  @extend %center;
+  display: flex;
+  align-items: center;
   fill: var(--secondary-color);
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -88,6 +129,11 @@
     color: var(--accent-color);
     fill: var(--accent-color);
   }
+
+  @include tablet {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
 
 .contact__icon {
@@ -97,6 +143,15 @@
 
 .mobile-menu-btn {
   margin-left: auto;
+  background-color: transparent;
+  border: none;
+
+  @include tablet {
+    display: none;
+  }
+  @include desktop {
+    display: none;
+  }
 }
 
 .mobile-menu {
