--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -9,8 +9,8 @@
 }
 
 .modal {
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   padding: 40px;
   background: var(--background-color);
   position: absolute;
@@ -21,6 +21,11 @@
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+
+  @include desktop {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .backdrop.is-hidden .modal {
@@ -143,8 +148,12 @@
 .modal__privacy-text {
   @extend %center;
   height: 24px;
-  @include font(400, 14px, 1.71, 0.03em);
+
+  @include font(400, 12px, 1.71, 0.03em);
   color: var(--secondary-color);
+  @include desktop {
+    @include font(400, 14px, 1.71, 0.03em);
+  }
 }
 
 .modal__privacy-text div {
