--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "./components/link";
 @import "./components/icons";
 @import "./components/modal";
+@import "./components/mobile-menu";
 
 @import "./layouts/header";
 @import "./layouts/hero";
