--- a/sass/layouts/_projects-company.scss
+++ b/sass/layouts/_projects-company.scss
@@ -3,22 +3,32 @@
 }
 
 .button-projects {
-  @extend %center;
+  // @extend %center;
+  // flex-wrap: wrap;
+  // margin-bottom: 50px;
+  display: flex;
   flex-wrap: wrap;
-  margin-bottom: 50px;
-
+  margin-bottom: 40px;
   color: var(--primary-color);
+  @include tablet {
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 14px;
+  }
 }
 
 .button-projects__item {
+  margin-bottom: 15px;
   margin-right: 8px;
   &:last-child {
     margin-right: 0px;
+    margin-bottom: 0;
   }
 }
 
 .button-projects__name {
-  padding: 6px 22px;
+  // padding: 6px 22px;
+  padding: 6px 25px;
   border-radius: 4px;
   border: none;
 
@@ -39,24 +49,42 @@
       1px 4px 6px rgba(0, 0, 0, 0.16);
     outline: 1px dotted;
   }
+
+  @include tablet {
+    padding: 6px 22px;
+  }
 }
 
 .team-projects {
-  display: flex;
-  flex-wrap: wrap;
+  // display: flex;
+  // flex-wrap: wrap;
+  @include tablet {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
 }
 
 .team-projects__work {
-  margin-right: 30px;
-  margin-bottom: 30px;
+  // margin-right: 30px;
+  // margin-bottom: 30px;
   border: none;
 
-  &:nth-child(3n) {
-    margin-right: 0;
-  }
+  // &:nth-child(3n) {
+  //   margin-right: 0;
+  // }
 
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0;
+  // &:nth-last-child(-n + 3) {
+  //   margin-bottom: 0;
+  // }
+  @include mobile {
+    @include calc(1);
+  }
+  @include tablet {
+    @include calc(2);
+  }
+  @include desktop {
+    @include calc(3);
   }
 }
 
