--- a/css/main.css
+++ b/css/main.css
@@ -1196,6 +1196,11 @@ img {
     margin-bottom: 14px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .button-projects {
+    margin-bottom: 50px;
+  }
+}
 
 .button-projects__item {
   margin-bottom: 15px;
@@ -1240,7 +1245,11 @@ img {
 }
 
 .team-projects__work {
+  margin-bottom: 30px;
   border: none;
+}
+.team-projects__work:last-child {
+  margin-bottom: 0;
 }
 @media screen and (min-width: 320px) {
   .team-projects__work {
@@ -1250,6 +1259,7 @@ img {
 @media screen and (min-width: 768px) {
   .team-projects__work {
     width: calc((100% - 30px) / 2);
+    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1200px) {
