--- a/sass/layouts/_projects-company.scss
+++ b/sass/layouts/_projects-company.scss
@@ -15,6 +15,9 @@
     flex-wrap: wrap;
     margin-bottom: 14px;
   }
+  @include desktop {
+    margin-bottom: 50px;
+  }
 }
 
 .button-projects__item {
@@ -67,8 +70,11 @@
 
 .team-projects__work {
   // margin-right: 30px;
-  // margin-bottom: 30px;
+  margin-bottom: 30px;
   border: none;
+  &:last-child {
+    margin-bottom: 0;
+  }
 
   // &:nth-child(3n) {
   //   margin-right: 0;
@@ -82,6 +88,7 @@
   }
   @include tablet {
     @include calc(2);
+    margin-bottom: 0;
   }
   @include desktop {
     @include calc(3);
