correct portfolio tablet

--- a/sass/layouts/_projects-company.scss
+++ b/sass/layouts/_projects-company.scss
@@ -147,6 +147,10 @@
   margin-bottom: 4px;
   @include font(null, 18px, 2, 0.06em);
   color: var(--primary-color);
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .team-projects__category {
