--- a/css/main.css
+++ b/css/main.css
@@ -1318,6 +1318,9 @@ img {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--primary-color);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .team-projects__category {
