--- a/css/main.css
+++ b/css/main.css
@@ -1222,6 +1222,7 @@ img {
   line-height: 1.62;
   letter-spacing: 0.03em;
   background-color: #f5f4fa;
+  color: var(--primary-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-projects__name:hover, .button-projects__name:focus {
