--- a/sass/layouts/_projects-company.scss
+++ b/sass/layouts/_projects-company.scss
@@ -39,6 +39,7 @@
   font-style: normal;
   @include font(500, 16px, 1.62, 0.03em);
   background-color: #f5f4fa;
+  color: var(--primary-color);
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1),
