--- a/css/main.css
+++ b/css/main.css
@@ -1269,7 +1269,9 @@ img {
 }
 
 .team-projects__link {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-projects__link:hover, .team-projects__link:focus {
@@ -1305,6 +1307,7 @@ img {
 }
 
 .team-projects__container {
+  flex-grow: 1;
   padding: 20px 24px;
   border-right: 1px solid var(--border-color);
   border-left: 1px solid var(--border-color);
@@ -1318,9 +1321,6 @@ img {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--primary-color);
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .team-projects__category {
