--- a/sass/layouts/_projects-company.scss
+++ b/sass/layouts/_projects-company.scss
@@ -96,7 +96,9 @@
 }
 
 .team-projects__link {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -136,6 +138,7 @@
 }
 
 .team-projects__container {
+  flex-grow: 1;
   padding: 20px 24px;
   border-right: 1px solid var(--border-color);
   border-left: 1px solid var(--border-color);
@@ -147,10 +150,6 @@
   margin-bottom: 4px;
   @include font(null, 18px, 2, 0.06em);
   color: var(--primary-color);
-
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .team-projects__category {
