--- a/css/main.css
+++ b/css/main.css
@@ -1215,13 +1215,13 @@ img {
   padding: 6px 25px;
   border-radius: 4px;
   border: none;
+  color: var(--primary-color);
+  background-color: #f5f4fa;
   font-family: "Roboto";
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: 0.03em;
-  background-color: #f5f4fa;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-projects__name:hover, .button-projects__name:focus {
