--- a/sass/layouts/_projects-company.scss
+++ b/sass/layouts/_projects-company.scss
@@ -34,11 +34,10 @@
   padding: 6px 25px;
   border-radius: 4px;
   border: none;
-
-  font-family: "Roboto";
-  font-style: normal;
-  @include font(500, 16px, 1.62, 0.03em);
+  color: var(--primary-color);
   background-color: #f5f4fa;
+  font-family: "Roboto";
+  @include font(500, 16px, 1.62, 0.03em);
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1),
