--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,7 +1,10 @@
 .logo {
-  margin-right: 93px;
-  padding-top: 24px;
-  padding-bottom: 25px;
+  margin-right: auto;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  // margin-right: 93px;
+  // padding-top: 24px;
+  // padding-bottom: 25px;
 }
 
 .section-logo {
