--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,9 +2,16 @@
   margin-right: auto;
   padding-top: 16px;
   padding-bottom: 16px;
-  // margin-right: 93px;
-  // padding-top: 24px;
-  // padding-bottom: 25px;
+  @include tablet {
+    margin-right: 88px;
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+  @include desktop {
+    margin-right: 93px;
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .section-logo {
