--- a/css/main.css
+++ b/css/main.css
@@ -425,7 +425,6 @@ img {
   background-color: var(--background-color);
   top: 0;
   position: fixed;
-  z-index: 1;
 }
 .mobile-menu > .mobile-menu__container {
   height: 100%;
@@ -514,6 +513,13 @@ img {
 .header {
   background-color: var(--background-color);
   border: 1px solid var(--background-portfolio-color);
+}
+@media screen and (max-width: 767px) {
+  .header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 768px) {
