--- a/css/main.css
+++ b/css/main.css
@@ -557,12 +557,17 @@ img {
   content: "";
   position: absolute;
   display: block;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 100%;
   height: 4px;
   background-color: var(--accent-color);
   border-radius: 2px;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .menu__link--active::after {
+    bottom: -3px;
+  }
 }
 .menu__link:hover, .menu__link:focus {
   color: var(--accent-color);
@@ -653,7 +658,7 @@ img {
   max-width: 480px;
   height: 400px;
   margin: 0 auto;
-  background-image: var(--gradient-hero), url(../images/hero-mobile.jpg);
+  background-image: var(--gradient-hero), url(../images/hero-mobile-1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -666,7 +671,7 @@ img {
 @media screen and (min-width: 768px) {
   .hero__style {
     max-width: 768px;
-    background-image: var(--gradient-hero), url(../images/hero-tablet.jpg);
+    background-image: var(--gradient-hero), url(../images/hero-tablet-1x.jpg);
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
@@ -678,7 +683,7 @@ img {
   .hero__style {
     max-width: 1600px;
     height: 600px;
-    background-image: var(--gradient-hero), url(../images/hero.jpg);
+    background-image: var(--gradient-hero), url(../images/hero-1x.jpg);
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
@@ -1005,6 +1010,11 @@ img {
   display: block;
   text-align: center;
 }
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .address {
+    margin-bottom: 60px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .address {
     text-align: left;
@@ -1021,7 +1031,6 @@ img {
 
 .address__wrap {
   margin-top: 20px;
-  margin-bottom: 60px;
 }
 
 .contacts-basement__google {
@@ -1048,9 +1057,12 @@ img {
   color: var(--accent-color);
 }
 
-.basement__social-networks {
-  margin-bottom: 60px;
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .social-networks {
+    margin-bottom: 60px;
+  }
 }
+
 @media screen and (min-width: 1200px) {
   .basement__social-networks {
     margin-left: 70px;
@@ -1134,7 +1146,6 @@ img {
 }
 
 .basement-form__input {
-  margin-bottom: 20px;
   width: 100%;
   height: 50px;
   padding-top: 15px;
@@ -1158,6 +1169,11 @@ img {
 }
 .basement-form__input::placeholder {
   color: rgba(255, 255, 255, 0.6);
+}
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .basement-form__input {
+    margin-bottom: 20px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .basement-form__input {
