--- a/sass/layouts/_footer-address.scss
+++ b/sass/layouts/_footer-address.scss
@@ -32,6 +32,10 @@
   display: block;
   text-align: center;
 
+  @media screen and (min-width: 480px) and (max-width: 1199px) {
+    margin-bottom: 60px;
+  }
+
   @include desktop {
     text-align: left;
   }
@@ -47,7 +51,6 @@
 
 .address__wrap {
   margin-top: 20px;
-  margin-bottom: 60px;
 }
 
 .contacts-basement__google {
