--- a/sass/layouts/_footer-mailing.scss
+++ b/sass/layouts/_footer-mailing.scss
@@ -26,8 +26,6 @@
 }
 
 .basement-form__input {
-  margin-bottom: 20px;
-
   width: 100%;
   height: 50px;
   padding-top: 15px;
@@ -42,6 +40,10 @@
 
   &::placeholder {
     color: rgba(255, 255, 255, 0.6);
+  }
+
+  @media screen and (min-width: 480px) and (max-width: 1199px) {
+    margin-bottom: 20px;
   }
 
   @include desktop {
