--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -52,12 +52,15 @@
     content: "";
     position: absolute;
     display: block;
-    bottom: 0;
+    bottom: -1px;
     left: 0;
     width: 100%;
     height: 4px;
     background-color: var(--accent-color);
     border-radius: 2px;
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      bottom: -3px;
+    }
   }
 
   &:hover,
