--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -4,7 +4,7 @@
   max-width: 480px;
   height: 400px;
   margin: 0 auto;
-  background-image: var(--gradient-hero), url(../images/hero-mobile.jpg);
+  background-image: var(--gradient-hero), url(../images/hero-mobile-1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -14,7 +14,7 @@
 
   @include tablet {
     max-width: 768px;
-    background-image: var(--gradient-hero), url(../images/hero-tablet.jpg);
+    background-image: var(--gradient-hero), url(../images/hero-tablet-1x.jpg);
     @include retina {
       background-image: var(--gradient-hero), url(../images/hero-tablet-2x.jpg);
     }
@@ -22,7 +22,7 @@
   @include desktop {
     max-width: 1600px;
     height: 600px;
-    background-image: var(--gradient-hero), url(../images/hero.jpg);
+    background-image: var(--gradient-hero), url(../images/hero-1x.jpg);
     @include retina {
       background-image: var(--gradient-hero), url(../images/hero-2x.jpg);
     }
