--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -27,6 +27,9 @@
     justify-content: space-between;
     overflow: auto;
   }
+  @include tablet {
+    display: none;
+  }
 }
 
 .mobile-menu-nav__item:not(:last-child) {
@@ -55,11 +58,17 @@
 .mobile-contact__tel {
   @include font(500, 34px, 1.18, 0.02em);
   color: var(--accent-color);
+  @media screen and (min-width: 320px) and (max-width: 479px) {
+    @include font(500, 25px, 1.6, 0.02em);
+  }
 }
 
 .mobile-contact__mail {
   @include font(500, 24px, 1.17, 0.02em);
   color: var(--secondary-color);
+  @media screen and (min-width: 320px) and (max-width: 479px) {
+    @include font(500, 22px, 1.27, 0.02em);
+  }
 }
 
 .mobile-social {
@@ -76,6 +85,9 @@
   @include font(500, 18px, 1.22, 0.02em);
   color: var(--accent-color);
   text-decoration: none;
+  @media screen and (min-width: 320px) and (max-width: 479px) {
+    @include font(500, 12px, 1.83, 0.02em);
+  }
 }
 
 .mobile-close {
