--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -9,7 +9,7 @@
 }
 
 .modal {
-  width: 450px;
+  width: 95%;
   height: 609px;
   padding: 40px;
   background: var(--background-color);
@@ -21,6 +21,10 @@
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
 
   @include desktop {
     width: 528px;
