--- a/css/main.css
+++ b/css/main.css
@@ -236,6 +236,7 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background: var(--main-btn-color);
+  fill: var(--primary-color);
   position: absolute;
   right: 8px;
   top: 8px;
