--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -42,6 +42,7 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background: var(--main-btn-color);
+  fill: var(--primary-color);
 
   position: absolute;
   right: 8px;
