--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -57,7 +57,7 @@
 .modal__close-icon {
   width: 18px;
   height: 18px;
-  fill: var(--primary-color);
+  fill: red;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
