--- a/css/main.css
+++ b/css/main.css
@@ -235,7 +235,7 @@ img {
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  background: var(--main-btn-color);
+  background: transparent;
   position: absolute;
   right: 8px;
   top: 8px;
@@ -248,7 +248,7 @@ img {
 .modal__close-icon {
   width: 18px;
   height: 18px;
-  fill: red;
+  fill: var(--primary-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
