background modal close btn

--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -41,7 +41,7 @@
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  background: transparent;
+  background: var(--main-btn-color);
 
   position: absolute;
   right: 8px;
