--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,4 +1,8 @@
 .header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1;
   background-color: var(--background-color);
   border: 1px solid var(--background-portfolio-color);
 }
